--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images/PRITHWIRAJ.PNG" alt="PRITHWIRAJ'S PHOTO" width="200" height="200"></td>
+      <td><img src="images/PRITHWIRAJ.png" alt="PRITHWIRAJ'S PHOTO" width="200" height="200"></td>
       <td>
         <h1> Prithwiraj Chatterjee </h1>
         <p><em> The person who gets excited about <strong> everything</strong>. </em></p>
