--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     </tbody>
   </table>
   <hr>
-  <a href="hobbies.html">MY HOBBIES</a>
+  <a href="HOBBIES.html">MY HOBBIES</a>
   <a href="CONTACT.html">CONTACT ME</a>
   <hr>
 </body>
